--- a/project/src/main/resources/application.properties
+++ b/project/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=project
 server.port=8081
 spring.datasource.url=jdbc:mysql://localhost:3306/project_Spring_Java
-spring.datasource.username=campus2023
-spring.datasource.password=campus2023
+spring.datasource.username=root
+spring.datasource.password=juandavidgomez15@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
